--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "[![Netlify Status](https://api.netlify.com/api/v1/badges/a8912b01-ae78-4f67-a2a3-a5d592ac54e6/deploy-status)](https://app.netlify.com/sites/rishi-bhugobaun/deploys)",
   "main": "index.js",
   "scripts": {
+    "start": "browserify ./js/index.js -o bundle.js",
+    "netdev": "concurrently \"watchify ./js/index.js -o bundle.js\" \"http-server\" ",
     "dev": "concurrently \"watchify ./js/index.js -o bundle.js\" \"sass --watch ./styles/sass:./styles/css --style compressed\" \"python -m http.server\" \"start http://localhost:8000\" ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,10 +22,12 @@
   "dependencies": {
     "animejs": "^3.2.1",
     "browserify": "^17.0.0",
-    "sass": "^1.32.8"
+    "luxon": "^1.26.0",
+    "node-fetch": "^2.6.1",
+    "sass": "^1.32.11"
   },
   "devDependencies": {
-    "concurrently": "^6.0.0",
+    "concurrently": "^6.0.2",
     "watchify": "^4.0.0"
   }
 }
