--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "browserify": "^17.0.0",
     "luxon": "^1.26.0",
     "modern-normalize": "^1.0.0",
+    "netlify-cli": "^3.24.3",
     "node-fetch": "^2.6.1",
     "particles.js": "^2.0.0",
     "sass": "^1.32.11"
